[package]
name = "anchor_escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
anchor-client = "0.31.1"

[profile.release]
overflow-checks = true

