[package]
name = "blueshift_pinocchio_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.19"
pinocchio = "0.9.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
thiserror = {version = "2.0.14", default-features = false}

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
solana-sdk = "2.1.6"
spl-associated-token-account = "4.0.0"
spl-token = "7.0.0"
